--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</nav> <!-- .main-navigation -->
 					<div class="mobile-menu"></div>
 				</div>
-			</header> <!-- .site-header -->
+			</header> <!-- .site header -->
 			
 			<div class="hero">
 				<div class="slider">
