--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="container">
 								<h2 class="slide-title">Header goes here</h2>
 								<h3 class="slide-subtitle">Less important text goes here</h3>
-								<p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
+								<p class="slide-desc">NIT MEGHALAYA <br>Fugiat aliquid minus nemo sed est.</p>
 
 								<a href="#" class="button cut-corner">Read More</a>
 							</div>
