--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 							<li class="menu-item"><a href="download.html">Download</a></li>
 							<li class="menu-item"><a href="blog.html">Blog</a></li>
 							<li class="menu-item"><a href="contact.html">Contact</a></li>
-						</ul> <!-- .menu -->
-					</nav> <!-- .main-navigation -->
+						</ul> <!-- menu -->
+					</nav> <!-- main-navigation -->
 					<div class="mobile-menu"></div>
 				</div>
-			</header> <!-- .site header -->
+			</header> <!-- site header -->
 			
 			<div class="hero">
 				<div class="slider">
