--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Band Template</title>
+		<title>Shishir 18'</title>
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -51,7 +51,7 @@
 							<div class="container">
 								<h2 class="slide-title">Header goes here</h2>
 								<h3 class="slide-subtitle">Less important text goes here</h3>
-								<p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
+								<p class="slide-desc">NIT MEGHALAYA <br>Fugiat aliquid minus nemo sed est.</p>
 
 								<a href="#" class="button cut-corner">Read More</a>
 							</div>
