Changes in the index.html and added a class eye-Catch and given the style in style.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-		
 		<title>Shishir 18'</title>
 		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Lobster|Source+Sans+Pro:300,400,600,700,900&effect=neon|fire-animation|3d-float" rel="stylesheet" type="text/css">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="style.css">
@@ -48,14 +47,13 @@
 				<div class="slider">
 					<ul class="slides">
 						<li class="lazy-bg" data-background="dummy/slide-1.jpg">
-							<div class="container">
-								<h2 class="slide-title">Header goes here</h2>
-								<h3 class="slide-subtitle">Less important text goes here</h3>
-								<p class="slide-desc">NIT MEGHALAYA <br>Fugiat aliquid minus nemo sed est.</p>
-
-								<a href="#" class="button cut-corner">Read More</a>
+							<div class="container eye-Catch font-effect-3d-float">
+								<h2 class="slide-title">Shishir</h2>
+								<h3 class="slide-subtitle">An annual cultural fest of NIT Meghalaya</h3>
+								<!--<a href="#" class="button cut-corner">Read More</a>-->
 							</div>
 						</li>
+						<!--
 						<li class="lazy-bg" data-background="dummy/slide-2.jpg">
 							<div class="container">
 									<h2 class="slide-title">Header goes here</h2>
@@ -74,6 +72,7 @@
 									<a href="#" class="button cut-corner">Read More</a>
 							</div>
 						</li>
+					-->
 					</ul>
 				</div>
 			</div>
