--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 						<a href="#"><i class="fa fa-google-plus"></i></a>
 						<a href="#"><i class="fa fa-pinterest"></i></a>
 					</div> <!-- .social-links -->
-					
+					<p class="copy">NIT Meghalaya.An Institute of National Importance.</p>
 					
 				</div>
 			</footer> <!-- .site-footer -->
