--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 					
 						<p>Shillong, Meghalaya <br> <br></p> 
 					</address> 
-					
+					<p class="copy">NIT Meghalaya.An Institute of National Importance.</p>
 				</div>
 			</footer> <!-- .site-footer -->
 
