--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 					<img src="dummy/logo-footer.png" alt="Site Name">
 					
 					<address>
-						<p>495 Brainard St. Detroit, MI 48201 <br><a href="tel:354543543">(563) 429 234 890</a> <br> <a href="mailto:info@bandname.com">info@bandname.com</a></p> 
+						<p>Bijni Complex, Laitumkhrah, Shillong, Meghalaya 793003<br>0364 250 1294</br>nitm.shishir18@gmail.com</p> 
 					</address> 
 					
 					<form action="#" class="newsletter-form">
