--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
 
 		<title>Shishir 18'</title>
 
-		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Lobster|Source+Sans+Pro:300,400,600,700,900&effect=neon|fire-animation|3d-float" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="styles1.css">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="style.css">
 		
-		<!--[if lt IE 9]>
-		<script src="js/ie-support/html5.js"></script>
-		<script src="js/ie-support/respond.js"></script>
-		<![endif]-->
-
 	</head>
 
 	<body class="header-collapse">
@@ -27,9 +21,7 @@
 				<div class="container">
 					<a href="index.html" id="branding">
 						<img src="dummy/logo.png" alt="Site Title">
-						<small class="site-description">Shishir 18</small>
-
-						<small class="site-description">NIT Meghalay's Annual Cultural Fest</small>
+						<small class="site-description">Shishir 18'</small>
 
 					</a> <!-- #branding -->
 					
@@ -55,14 +47,9 @@
 							<div class="container">
 								<h2 class="slide-title">Shishir 18</h2>
 								<h3 class="slide-subtitle">The Annual Cultural Festival of NIT Meghalaya</h3>
-								<p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
+								<p class="slide-desc">16th-18th February</p>
 
-								<a href="#events-section" class="button cut-corner">Read More</a>
-							<div class="container eye-Catch font-effect-3d-float">
-								<h2 class="slide-title">Shishir</h2>
-								<h3 class="slide-subtitle">An annual cultural fest of NIT Meghalaya</h3>
-								<!--<a href="#" class="button cut-corner">Read More</a>-->
-							</div>
+							<a href="#events-section" class="button cut-corner">Read More</a>
 						</li>
 						<!--
 						<li class="lazy-bg" data-background="dummy/slide-2.jpg">
@@ -216,18 +203,19 @@
 
 				<div class="fullwidth-block why-chooseus-section">
 					<div class="container">
-						<h2 class="section-title">Why choose us?</h2>
+						<h2 class="section-title">Watch out for</h2>
 
 						<div class="row">
 							<div class="col-md-4">
 								<div class="feature">
 									<figure class="cut-corner">
-										<img src="dummy/medium-image-1.jpg" alt="">
+										<img class="watchoutimages" src="images/nikhildsouza.jpg" alt="">
 									</figure>
-									<h3 class="feature-title">Similique sunt in culpa qui officia deserunt mollitia animi laborum dolorum</h3>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+									<h3 class="feature-title">Celebrity Night with Nikhil D'Souza</h3>
+									<p>Shishir's Celebrity Night is one of a kind</p>
 								</div> <!-- .feature -->
 							</div>
+
 							<div class="col-md-4">
 								<div class="feature">
 									<figure class="cut-corner">
@@ -237,6 +225,7 @@
 									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 								</div> <!-- .feature -->
 							</div>
+
 							<div class="col-md-4">
 								<div class="feature">
 									<figure class="cut-corner">
@@ -246,6 +235,7 @@
 									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 								</div> <!-- .feature -->
 							</div>
+							
 						</div>
 					</div> <!-- .container -->
 				</div> <!-- .why-chooseus-section -->
