--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 				<div class="container">
 					<a href="index.html" id="branding">
 						<img src="dummy/logo.png" alt="Site Title">
-						<small class="site-description">Slogan goes here</small>
+						<small class="site-description">NIT Meghalaya's Annual Cultural Fest</small>
 					</a> <!-- #branding -->
 					
 					<nav class="main-navigation">
