--- a/contact.html
+++ b/contact.html
@@ -60,16 +60,17 @@
 							</div>
 							<div class="col-md-6">
 								<div class="map-wrapper">
-									<div class="map"></div>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3598.9333643413665!2d91.89251901458206!3d25.573883622591364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37507ebea0669f29%3A0x9017af20606a5f81!2sNational+Institute+of+Technology+Meghalaya!5e0!3m2!1sen!2sin!4v1517643195673" width="554" height="310" frameborder="0" style="border:0" allowfullscreen></iframe>
+									<!--div class="map"></div -->
 									<address>
 										<div class="row">
 											<div class="col-sm-6">
-												<strong>Company Name INC.</strong>
-												<span>40 Sibley St, Detroit</span>
+												<strong>NIT Meghalaya,</strong>
+												<span>Bijni Complex, Laitumkhrah, Shillong, Meghalaya 793003</span>
 											</div>
 											<div class="col-sm-6">
-												<a href="mailto:office@companyname.com">office@companyname.com</a> <br>
-												<a href="tel:532930098891">(532) 930 098 891</a>
+												<a href="mailto:nitm.shishir18@gmail.com">nitm.shishir18@gmail.com</a> <br>
+												<a href="tel:532930098891">0364 250 1294</a>
 											</div>
 										</div>
 									</address>
