Home Page customizations  --Pictures need attention

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 							<ul class="slides">
 								<li>
 									<blockquote>
-										<p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo"</p>
-										<cite>John Smith</cite>
-										<span>Corporation CEO, books author</span>
+										<p>"NIT Meghalaya Rocks."</p>
+										<cite>Kshitij Tarey</cite>
+										<span>Composer, Singer, Musician</span>
 									</blockquote>
 								</li>
 								<li>
 									<blockquote>
-										<p>"Iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo"</p>
-										<cite>John Smith</cite>
-										<span>Corporation CEO, books author</span>
+										<p>"Its great to be here."</p>
+										<cite>Gajendra Verma</cite>
+										<span>Playback Singer, Composer</span>
 									</blockquote>
 								</li>
 							</ul>
@@ -218,20 +218,20 @@
 							<div class="col-md-4">
 								<div class="feature">
 									<figure class="cut-corner">
-										<img src="dummy/medium-image-2.jpg" alt="">
+										<img class="watchoutimages" src="images/fridaytheband.jpg" alt="">
 									</figure>
-									<h3 class="feature-title">Similique sunt in culpa qui officia deserunt mollitia animi laborum dolorum</h3>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+									<h3 class="feature-title">Band Night with Friday</h3>
+									<p>Dance to the groove</p>
 								</div> <!-- .feature -->
 							</div>
 
 							<div class="col-md-4">
 								<div class="feature">
 									<figure class="cut-corner">
-										<img src="dummy/medium-image-3.jpg" alt="">
+										<img src="images/comingsoon.jpg" alt="">
 									</figure>
-									<h3 class="feature-title">Similique sunt in culpa qui officia deserunt mollitia animi laborum dolorum</h3>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+									<h3 class="feature-title">Chief Guest</h3>
+									<p> </p>
 								</div> <!-- .feature -->
 							</div>
 							
