Some minor changes

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>About Us | Shishir '18</title>
+		<title>Contact Us | Shishir '18</title>
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet" type="text/css">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -89,7 +89,8 @@
 						<a href="https://www.instagram.com/shishir2k18/"><i class="fa fa-instagram"></i></a>
 
 					</div> <!-- .social-links -->
-					<p class="copy">NIT Meghalaya.An Institute of National Importance.</p>
+					<p>Shillong, Meghalaya 793003 <br> <br></p>
+					<p class="copy">NIT Meghalaya<br>An Institute of National Importance</br></p>
 					
 				</div>
 			</footer> <!-- .site-footer -->
