[Contacts Page] Added Contact Details

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
 						<small class="site-description">Shishir '18</small>
 					</a> <!-- #branding -->
 					
+
 					<nav class="main-navigation">
 						<button type="button" class="toggle-menu"><i class="fa fa-bars"></i></button>
 						<ul class="menu">
@@ -50,10 +51,17 @@
 						<h2 class="page-title">Contact Us</h2>
 						<div class="row">
 							<div class="col-md-6">
+								<p><h2>National Institute of Technology Meghalaya</h2>
+									<h2>Bijni Complex, Laitumkhrah</h2>
+									<h2>Shillong-793003, Meghalaya, India</h2>
+									<!-- h2>Website: <a href="http://nitmeghalaya.in/nitm_web/index.php">nitmeghalaya.in</a></h2-->
+									<h2>Contacts : <br></br><li>+91 7005100039<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Suresh Gudepu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cultutal Secretary</br><br></br></li>
+										<li>+91 8413015227<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jibesh Bhattacharjee<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head, Web Development Team</br></li></h2>
+								</p>
 							</div>
 							<div class="col-md-6">
 								<div class="map-wrapper">
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3598.9333643413665!2d91.89251901458206!3d25.573883622591364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37507ebea0669f29%3A0x9017af20606a5f81!2sNational+Institute+of+Technology+Meghalaya!5e0!3m2!1sen!2sin!4v1517643195673" width="554" height="310" frameborder="0" style="border:0" allowfullscreen></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3598.9333643413665!2d91.89251901458206!3d25.573883622591364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37507ebea0669f29%3A0x9017af20606a5f81!2sNational+Institute+of+Technology+Meghalaya!5e0!3m2!1sen!2sin!4v1517643195673" width="554" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 									<address>
 										<div class="row">
 											<div class="col-sm-6">
@@ -61,7 +69,7 @@
 												<span>Bijni Complex, Laitumkhrah, Shillong</span>
 											</div>
 											<div class="col-sm-6">
-												<a href="mailto:shishir18@gmail.com">shishir18@gmail.com</a> <br>
+												<a href="mailto:shishir18.nitm@gmail.com">shishir18.nitm@gmail.com</a> <br>
 												<a href="tel:354543543">+91 8413015227</a>
 											</div>
 										</div>
