--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 											<li>
 												<figure class="cover"><img src="dummy/HarshMohammad.jpg" alt="Harsh Mohammad"></figure>
 												<div class="detail">
-													<h3><a href="#">Arsh Mohammad</a></h3>
+													<h3><a href="#">Harsh Mohammad</a></h3>
 													<span class="year">"quote..."</span>
 													<span class="track">Shishir '17</span>
 												</div>
