Footer double writing eror removed

--- a/index.html
+++ b/index.html
@@ -237,8 +237,7 @@
 					<img src="dummy/logo-footer.png" alt="Site Name">
 					
 					<address>
-						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br><a href="tel:354543543">+91 8413015227</a> <br> <a href="mailto:shishir18@gmail.com">shishir18@gmail.com</a></p> 
-						<p>Bijni Complex, Laitumkhrah, Shillong<br><a href="tel:354543543">+91 8413015227</a> <br> <a href="mailto:shishir18.nitm@gmail.com">shishir18.nitm@gmail.com</a></p> 
+						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br><a href="tel:354543543">+91 8413015227</a> <br> <a href="mailto:shishir18@gmail.com">shishir18.nitm@gmail.com</a></p>  
 					</address> 
 					
 					<div class="social-links">
