Official Logo added. Advertisement for book also added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="images/logo.jpg" alt="Site Title">
-						<small class="site-description">Shishir '18</small>
+						<img class="logo" src="images/logo.jpg" alt="Site Logo">
 
 					</a> <!-- #branding -->
 					
@@ -221,11 +220,10 @@
 			</main> <!-- .main-content -->
 
 			<!-- ADVERTISEMENT SECTION -->
-			<div class="bookadvertisement" style="background-image: url(images/Advertise1.jpg); border: 1px solid black">
+			<div class="bookadvertisement">
 
 				<!-- <h2 class="section-title">When you realize NIT Meghalaya gives birth to all kinds of talents.</h2> -->
 				<!-- <span>My First Breakup</span> -->
-				Background image.
 
 			</div>
 			
@@ -234,7 +232,7 @@
 
 			<footer class="site-footer">
 				<div class="container">
-					<img src="dummy/logo-footer.png" alt="Site Name">
+					<img src="images/logo.jpg" alt="Site Logo">
 					
 					<address>
 						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br><a href="tel:354543543">+91 8413015227</a> <br> <a href="mailto:shishir18@gmail.com">shishir18.nitm@gmail.com</a></p>  
