--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="dummy/logo.png" alt="Site Title">
+						<img class="logo" src="images/logo.jpg" alt="Site Title">
 						<small class="site-description">Shishir '18</small>
 					</a> <!-- #branding -->
 					
@@ -118,7 +118,7 @@
 
 			<footer class="site-footer">
 				<div class="container">
-					<img src="dummy/logo-footer.png" alt="Site Name">
+					<img class="logo" src="images/logo.jpg" alt="Site Name">
 					
 					<address>
 						<p>Bijni Complex, Laitumkhrah, Shillong<br><a href="tel:354543543">+91 8413015227</a> <br> <a href="mailto:shishir18.nitm@gmail.com">shishir18.nitm@gmail.com</a></p> 
