--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="dummy/logo.png" alt="Site Title">
+						<img class="logo" src="images/logo.jpg" alt="Site Title">
 						<small class="site-description">Slogan goes here</small>
 					</a> <!-- #branding -->
 					
@@ -108,7 +108,7 @@
 
 			<footer class="site-footer">
 				<div class="container">
-					<img src="dummy/logo-footer.png" alt="Site Name">
+					<img class="logo" src="images/logo.jpg" alt="Site Name">
 					
 					<address>
 						<p>495 Brainard St. Detroit, MI 48201 <br><a href="tel:354543543">(563) 429 234 890</a> <br> <a href="mailto:info@bandname.com">info@bandname.com</a></p> 
