--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
 		<title>Shishir '18</title>
-
+		<link rel="shortcut icon" href="images/favicon.png" />
 		<link rel="stylesheet" href="styles1.css">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<!-- Loading main css file -->
