logos and about section description added

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="dummy/logo.png" alt="Site Title">
+					<img class="logo" src="images/logo.jpg" alt="Site Logo">
 						<small class="site-description">Shishir '18</small>
 					</a> <!-- #branding -->
 					
