--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="dummy/logo.png" alt="Site Title">
+						<img class="logo" src="images/logo.jpg" alt="Site Logo">
 						<small class="site-description">Shishir '18</small>
 					</a> <!-- #branding -->
 					
@@ -54,10 +54,12 @@
 									<figure class="featured-image">
 										<img src="dummy/Shishir.jpg" alt="post image">
 									</figure>
-									<p class="leading">TO BE FILLED</p>
-									<p>TO BE FILLED</p>
+									<p class="leading"></p>
+									<p>“Culture is the widening of the mind and of the spirit.” ‘SHISHIR’ is the Annual Cultural Fest of the National Institute of Technology, Meghalaya.Quoting the words of David Binder- “Festivals promote diversity, they bring neighbours into dialogue, they increase creativity, they offer opportunities for civic pride, they improve our general psychological well-being.” Keeping this in mind, NIT Meghalaya brings Meghalaya’s largest cultural fest to be held during February 24-26, 2017 in Bijni Complex, Laitumkhrah,Shillong.</p>
 
-									<p>TO BE FILLED</p>
+									<p>NIT Meghalaya welcomes you all to a delightful spectacle of every culture on one platform among the cold and refreshing hills of Shillong, where you could carve out the most magical memories of your life, where nature and culture unroll their magic together and where you would travel back into time and relive those magical events.
+
+</p>
 								</div>
 							</div>
 							<div class="col-md-4 col-md-push-1">
