--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,8 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="dummy/logo.png" alt="Site Title">
-						<small class="site-description">Slogan goes here</small>
+						<img class="logo" src="images/logo.jpg" alt="Site Logo">
+						<small class="site-description">Shishir '18</small>
 					</a> <!-- #branding -->
 					
 					<nav class="main-navigation">
