[Gallery page] Updated to match with the details on other pages

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 					<a href="index.html" id="branding">
 						<img class="logo" src="images/logo.jpg" alt="Site Logo">
 
-						<small class="site-description">Shishir '18</small>
+						<small class="site-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shishir '18</small>
 					</a> <!-- #branding -->
 					
 					<nav class="main-navigation">
