--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 					<img src="images/logo.jpg" alt="Site Logo">
 					
 					<address>
-						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br><a href="tel:354543543">+91 8413015227</a> <br> <a href="mailto:shishir18@gmail.com">shishir18.nitm@gmail.com</a></p>  
+						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br>+91 8413015227<br> <a href="mailto:shishir18@gmail.com">shishir18.nitm@gmail.com</a></p>  
 					</address> 
 					
 					<div class="social-links">
