--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 												<figure class="cover"><img src="images/Gajendra Verma.jpg" alt="Gajendra Verma"></figure>
 												<div class="detail">
 													<h3><a href="#">Gajendra Verma</a></h3>
-													<span class="year">"quote..."</span>
+													<span class="year">"Its great to be here."</span>
 													<span class="track">Shishir '16</span>
 												</div>
 											</li>
@@ -86,7 +86,7 @@
 												<figure class="cover"><img src="images/KshitijTarey.jpeg" alt="tKshitijTarey"></figure>
 												<div class="detail">
 													<h3><a href="#">Kshitij Tarey</a></h3>
-													<span class="year">"quote..."</span>
+													<span class="year">"NIT Meghalaya Rocks."</span>
 													<span class="track">Shishir '15</span>
 												</div>
 											</li>
