--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,8 @@
 									<h2>Bijni Complex, Laitumkhrah</h2>
 									<h2>Shillong-793003, Meghalaya, India</h2>
 									<!-- h2>Website: <a href="http://nitmeghalaya.in/nitm_web/index.php">nitmeghalaya.in</a></h2-->
-									<h2>Contacts : <br></br><li>+91 7005100039<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Suresh Gudepu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cultutal Secretary</br><br></br></li>
-										<li>+91 8413015227<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jibesh Bhattacharjee<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head, Web Development Team</br></li></h2>
+									<h2>Contacts : <br></br><li>+91 7005100039<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Suresh Gudepu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;General Secretary (Socio-cultural)</br><br></br></li>
+										<li>+91 8413015227<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jibesh Bhattacharjee<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Secretary (Students Council webpage maintenance)</br></li></h2>
 								</p>
 							</div>
 							<div class="col-md-6">
