--- a/gallery.html
+++ b/gallery.html
@@ -107,10 +107,12 @@
 					<img class="logo" src="images/logo.jpg" alt="Site Name">
 					
 					<address>
+						<p class="get">GET IN TOUCH</p>
 						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br>+91 8413015227 <br> <a href="mailto:shishir18@gmail.com">shishir18.nitm@gmail.com</a></p>					
 					</address> 
 					
 					<div class="social-links">
+						<p class="get">GET SOCIAL</p>
 						<a href="https://www.facebook.com/shishir.nitm/"><i class="fa fa-facebook-square"></i></a>
 						<a href="https://www.instagram.com/shishir2k18/"><i class="fa fa-instagram"></i></a>
 					</div> <!-- .social-links -->
