--- a/index.html
+++ b/index.html
@@ -236,10 +236,12 @@
 					<img src="images/logo.jpg" alt="Site Logo">
 					
 					<address>
+						<p class="get">GET IN TOUCH</p>
 						<p>Bijni Complex, Laitumkhrah, Shillong 793003<br>+91 8413015227<br> <a href="mailto:shishir18@gmail.com">shishir18.nitm@gmail.com</a></p>  
 					</address> 
 					
 					<div class="social-links">
+						<p class="get">GET SOCIAL</p>
 						<a href="https://www.facebook.com/shishir.nitm/"><i class="fa fa-facebook-square"></i></a>
 						<a href="https://www.instagram.com/shishir2k18/"><i class="fa fa-instagram"></i></a>
 					</div> <!-- .social-links -->
