[Home] Added parallax on main image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 			<div class="hero">
 				<div class="slider">
 					<ul class="slides">
-						<li class="lazy-bg" data-background="dummy/slide-1.jpg">
+						<li class="lazy-bg" data-background="dummy/slide-1.jpg" style="background-image: url(&quot;dummy/slide-1.jpg&quot;); float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; height: 100%;
+						background-attachment: fixed;
+						background-position: center;
+						background-repeat: no-repeat;
+						background-size: cover;">
 							<div class="container">
 								<h2 class="slide-title">Shishir '18</h2>
 								<h3 class="slide-subtitle">The Annual Cultural Fest of NIT Meghalaya</h3>
