--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,12 @@
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="style.css">
-		
+		<style>
+				a:link {color: #848484; text-decoration: none; }
+				a:active {color: #0000ff; text-decoration: none; }
+				a:visited {color: #008000; text-decoration: none; }
+				a:hover {color: #ff0000; text-decoration: none; }
+		</style>
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
 		<script src="js/ie-support/respond.js"></script>
@@ -53,12 +58,14 @@
 						<h2 class="page-title">Contact Us</h2>
 						<div class="row">
 							<div class="col-md-6">
-								<p><h2>National Institute of Technology Meghalaya</h2>
-									<h2>Bijni Complex, Laitumkhrah</h2>
-									<h2>Shillong-793003, Meghalaya, India</h2>
+								<p><h2><i class="fa fa-map-marker fontadjust"></i>&nbsp;National Institute of Technology Meghalaya
+										<div class="test">Bijni Complex, Laitumkhrah<br>Shillong-793003, Meghalaya, India</div>
+									</h2>
+									<h2 ><i class="fa fa-envelope fontadjust" style="line-height: 100%; color:orangered"></i><a href="mailto:shishir18.nitm@gmail.com">shishir18.nitm@gmail.com</a></h2>
 									<!-- h2>Website: <a href="http://nitmeghalaya.in/nitm_web/index.php">nitmeghalaya.in</a></h2-->
-									<h2>Contacts : <br></br><li>+91 7005100039<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Suresh Gudepu<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;General Secretary (Socio-cultural)</br><br></br></li>
-										<li>+91 8413015227<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jibesh Bhattacharjee<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Secretary (Students Council webpage maintenance)</br></li></h2>
+									<h2><i class="fa fa-phone fontadjust" style="line-height: 150%"></i>+91 7005100039<div class="test">Suresh Gudepu<br>General Secretary (Socio-cultural)</br></div><br>
+										<i class="fa fa-phone fontadjust"></i>+91 8413015227<div class="test">Jibesh Bhattacharjee<br>Secretary (Students Council webpage maintenance)</br></div>
+									</h2>
 								</p>
 							</div>
 							<div class="col-md-6">
