--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 				a:link {color: #848484; text-decoration: none; }
 				a:active {color: #0000ff; text-decoration: none; }
 				a:visited {color: #008000; text-decoration: none; }
-				a:hover {color: #ff0000; text-decoration: none; }
+				a:hover {color: orangered; text-decoration: none; }
 		</style>
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
@@ -43,8 +43,7 @@
 							<li class="menu-item"><a href="index.html">Home</a></li>
 							<li class="menu-item"><a href="about.html">About</a></li>
 							<li class="menu-item"><a href="gallery.html">Gallery</a></li>
-							
-						
+							<li class="menu-item"><a href="sindex.html">Schedule</a></li>
 							<li class="menu-item current-menu-item"><a href="contact.html">Contact</a></li>
 						</ul> <!-- .menu -->
 					</nav> <!-- .main-navigation -->
