[SCHEDULE] Added descriptions of some events

--- a/sindex.html
+++ b/sindex.html
@@ -77,25 +77,25 @@
 					<div class="top-info"><span>16 February</span></div>
 
 					<ul>
-						<li class="single-event" data-start="10:00" data-end="15:00" data-content="event-abs-circuit" data-event="event-1">
+						<li class="single-event" data-start="10:00" data-end="15:00" data-content="event-krig" data-event="event-1">
 							<a href="#0">
-								<em class="event-name">Krig</em>
+								<em class="event-name">Krigz</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="16:00" data-end="18:00" data-content="event-rowing-workout" data-event="event-3">
+						<li class="single-event" data-start="16:00" data-end="18:00" data-content="event-harmony" data-event="event-3">
 							<a href="#0">
 								<em class="event-name">Harmony</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="18:00" data-end="19:30"  data-content="event-yoga-1" data-event="event-2">
+						<li class="single-event" data-start="18:00" data-end="19:30"  data-content="event-dramatics" data-event="event-2">
 							<a href="#0">
 								<em class="event-name">Dramatics</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="19:30" data-end="21:00"  data-content="event-yoga-1" data-event="event-4">
+						<li class="single-event" data-start="19:30" data-end="21:00"  data-content="event-band" data-event="event-4">
 								<a href="#0">
 									<em class="event-name">Band Performance</em>
 								</a>
@@ -107,25 +107,25 @@
 					<div class="top-info"><span>17 February</span></div>
 
 					<ul>
-						<li class="single-event" data-start="10:00" data-end="14:00"  data-content="event-rowing-workout" data-event="event-2">
-							<a href="#0">
+						<li class="single-event" data-start="10:00" data-end="14:00"  data-content="event-food" data-event="event-2">
+							<a href="event-abs-circuit.html">
 								<em class="event-name">Food Fest</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="14:00" data-end="16:00"  data-content="event-restorative-yoga" data-event="event-3">
+						<li class="single-event" data-start="14:00" data-end="16:00"  data-content="event-special" data-event="event-3">
 							<a href="#0">
 								<em class="event-name">Special Singing & Dancing Performance</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="16:00" data-end="19:00" data-content="event-abs-circuit" data-event="event-4">
+						<li class="single-event" data-start="16:00" data-end="19:00" data-content="event-dance" data-event="event-4">
 							<a href="#0">
 								<em class="event-name">Dance Night</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="19:00" data-end="21:00"  data-content="event-yoga-1" data-event="event-1">
+						<li class="single-event" data-start="19:00" data-end="21:00"  data-content="event-pronight" data-event="event-1">
 							<a href="#0">
 								<em class="event-name">Pronight</em>
 							</a>
@@ -137,25 +137,25 @@
 					<div class="top-info"><span>18 February</span></div>
 
 					<ul>
-						<li class="single-event" data-start="10:00" data-end="16:00" data-content="event-restorative-yoga" data-event="event-4">
+						<li class="single-event" data-start="10:00" data-end="16:00" data-content="event-fun" data-event="event-4">
 							<a href="#0">
 								<em class="event-name">Fun events</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="16:00" data-end="18:30" data-content="event-yoga-1" data-event="event-1">
+						<li class="single-event" data-start="16:00" data-end="18:30" data-content="event-panache" data-event="event-1">
 							<a href="#0">
 								<em class="event-name">Panache</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="18:30" data-end="19:30"  data-content="event-rowing-workout" data-event="event-3">
+						<li class="single-event" data-start="18:30" data-end="19:30"  data-content="event-prize" data-event="event-3">
 							<a href="#0">
 								<em class="event-name">Prize Distribution</em>
 							</a>
 						</li>
 
-						<li class="single-event" data-start="19:30" data-end="21:00" data-content="event-yoga-1" data-event="event-2">
+						<li class="single-event" data-start="19:30" data-end="21:00" data-content="event-dj" data-event="event-2">
 							<a href="#0">
 								<em class="event-name">DJ Night</em>
 							</a>
