--- a/about.html
+++ b/about.html
@@ -22,7 +22,6 @@
 				<div class="container">
 					<a href="index.html" id="branding">
 						<img class="logo" src="images/logo.jpg" alt="Site Logo">
-						<small class="site-description">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shishir '18</small>
 					</a>
 					
 					<nav class="main-navigation">
@@ -71,7 +70,7 @@
 												<figure class="cover"><img src="images/HarshMohammad.jpg" alt="Harsh Mohammad"></figure>
 												<div class="detail">
 													<h3><a href="#">Arsh Mohammad</a></h3>
-													<span class="year">"quote..."</span>
+													<span class="year">"I really wish I can come back here again."</span>
 													<span class="track">Shishir '17</span>
 												</div>
 											</li>
@@ -95,7 +94,7 @@
 												<figure class="cover"><img src="images/SaurabheeDebbarma.jpeg" alt="Saurabhee Debbarma"></figure>
 												<div class="detail">
 													<h3><a href="#">Saurabhee Debbarma</a></h3>
-													<span class="year">"quote..."</span>
+													<span class="year">"Had a really great time with everyone."</span>
 													<span class="track">Shishir '14</span>
 												</div>
 											</li>
