Krig spell changed

--- a/sindex.html
+++ b/sindex.html
@@ -79,14 +79,16 @@
 					<ul>
 						<li class="single-event" data-start="10:00" data-end="15:00" data-content="event-krig" data-event="event-1">
 							<a href="#0">
-								<em class="event-name">Krigz</em>
+								<em class="event-name">Krig</em>
 							</a>
 						</li>
 
 						<li class="single-event" data-start="16:00" data-end="18:00" data-content="event-harmony" data-event="event-3">
 							<a href="#0">
 								<em class="event-name">Harmony</em>
+								<p style="color:red;">I am red</p>
 							</a>
+							
 						</li>
 
 						<li class="single-event" data-start="18:00" data-end="19:30"  data-content="event-dramatics" data-event="event-2">
