[SCHEDULE]Added discriptions of some events. (Krig, Harmony, Food-Fest, EBSB Event, Panache)

--- a/event-food.html
+++ b/event-food.html
@@ -1,3 +1,11 @@
 <div class="event-info">
-	<div>Food fest</div>
+	<div><strong>Rules and Guidelines:</strong><br></br>
+		<strong>1:</strong> Registration fee is Rs. 100.<br>
+		<strong>2:</strong> Group is maximum of 3 members.<br>
+		<strong>3:</strong> A group can prepare different dishes.<br>
+		<strong>4:</strong> It will be rated by the customers on the basis of their rating.<br>
+		<strong>5:</strong> Group will be awarded with prize.<br>
+		<strong>6:</strong> Every group will get 4 gas points. Every group has to use those gas points.<br>
+		<strong>7:</strong> Participants have to bring their induction if they are using induction. Power supply will be provided by college.<br>
+		<strong>8:</strong> Only one prize which will be on the basis of ratings given by the customers.<br><br></br></div>
 </div>
