--- a/event-harmony.html
+++ b/event-harmony.html
@@ -1,3 +1,24 @@
 <div class="event-info">
-	<div>Do you think your voice matters? Do you have the power to change the mood or move the world with a single tone? If you think you can make the crowd forget themselves in your performance, then this is the place to be</div>
+	<div>
+			We welcome you to Shishir ‘18 with a bang and dose of music and songs on it’s first day. Anyone who has what it takes, come forward. The stage is yours. The mic is yours. Now make the crowd yours.
+			<br></br>
+			Rules and guidelines:<br></br>
+			
+			1) It will have three categories; solo, group and duet.<br>
+			
+			2) The participant/s has to perform any one song of his/her choice. The song has no language/dialect boundary.<br>
+			
+			3) Judging is solely done on the voice of the singer for Solo irrespective of whether he/she plays an instrument.<br>
+			
+			4) Music instruments will be provided. And a participant may bring his/her own gear/add-on if he/she wishes.<br>
+			
+			5) Participants must confirm availability of the instruments in advance to the event organizers.<br>
+			
+			6) Explicit or offensive lyrics/gestures guarantee immediate expulsion.<br>
+			
+			7) Participants under the influence of intoxicants will not be entertained.<br>
+			
+			8) Maximum performance time is <strong>4 minutes</strong> per participant.<br>
+			
+			9) In case of dispute, the organizers have rights to bend rules provided it does minimum conflict to both parties.<br><br></br></div>
 </div>
