--- a/event-krig.html
+++ b/event-krig.html
@@ -1,4 +1,13 @@
 <div class="event-info">
-	<div>Departmental Wars </div>
-	<p style="color:blue;">I am red</p>
+	<div>Krigz is an departmental event. This is the first time ever Shishir brings to you the war between the departments on singing,dancing,tug of war,etc<br></br>
+		   <strong>Events description:</strong><br></br>
+		   <strong>Singing:</strong> One group which includes students from all years (max time 5 mins).<br>
+		   <strong>Dancing:</strong> One group which includes students from all years ( max time 5 mins).<br>
+		   <strong>Treasure Hunt:</strong> Two group from each branch containing 5 members each.<br>
+		   <strong>Tug of War:</strong> 10 members two teams from each branch.<br>
+		   <strong>Futsal:</strong> Two teams from each branch containing 7 members each (playing 5, 2 substitute).<br> 
+		   <strong>Gully Cricket:</strong> Two teams from each branch containing 7 members each (playing 5, 2 substitute).<br>
+		   <strong>Rangoli:</strong> Two or one team of 4 members.<br>
+		   <strong>Online Gaming:</strong> Two teams from each team for CS:GO and 5 players for FIFA.<br></br>  
+	</div>
 </div>
