--- a/event-panache.html
+++ b/event-panache.html
@@ -1,3 +1,25 @@
 <div class="event-info">
-	<div>Panache aims to decode the confidence, unleash the wit and debug the style quotient of the budding technocrats</div>
+	<div>Panache aims to decode the confidence, unleash the wit and debug the style quotient of the budding technocrats.<br></br>
+
+			<strong>Event description:</strong><br></br>
+			
+			<strong>Bridal</strong> - A section in the event where our techie models play bride and bridesmaids on the ramp.<br>
+			
+			<strong>Ballroom</strong> - Twist, turn and tap your feet to the tunes of love with the other half model colleague.<br>
+			
+			<strong>Colours of India</strong> - A chance to take pride and weave the threads of culture and tradition while walking down the ramp.<br>
+			
+			<strong>Streetwalk</strong> - While dressing fancy is occassional but comfort and street-style is bae .<br>
+			
+			<strong>Glitter and Glow</strong> - While your inner heart glows, why don't you glitter yourself up with some lights.<br>
+			
+			<strong>Rock the Prop</strong> - Turn left , turn right, pick what you see and hit the ramp.<br>
+			
+			<strong>Halloween</strong> - Stop scaring your friend in the dark room and instead, do it on stage, may be ?<br>
+			
+			<strong>Fashion of the Hills</strong> - Time to hit the ramp while being draped in the beautiful traditional clothes of Meghalaya.<br>
+			
+			<strong>Executive</strong> - When we follow fashion in every place, why not in the office ?<br></br>
+			
+			<strong>Top scorers based on their performance on the ramp will be selected for the questionaire. The winners will be entitled Mr. Panache and Ms. Panache.</strong><br><br></br></div>
 </div>
