--- a/event-special.html
+++ b/event-special.html
@@ -1,3 +1,3 @@
 <div class="event-info">
-	<div>Special</div>
+	<div>Special singing and dancing is <strong>EBSB Event ( Ek Bharat Shrestha Bharat)</strong>.<br></br>It's a traditional/ folk singing and dancing competition combining songs and dances of Meghalaya, Uttar Pradesh and Arunachal Pradesh<br></br></div>
 </div>
