--- a/sindex.html
+++ b/sindex.html
@@ -85,7 +85,6 @@
 						<li class="single-event" data-start="16:00" data-end="18:00" data-content="event-harmony" data-event="event-3">
 							<a href="#0">
 								<em class="event-name">Harmony</em>
-								<p style="color:red;">I am red</p>
 							</a>
 							
 						</li>
@@ -116,7 +115,7 @@
 
 						<li class="single-event" data-start="14:00" data-end="16:00"  data-content="event-special" data-event="event-3">
 							<a href="#0">
-								<em class="event-name">Special Singing & Dancing Performance</em>
+								<em class="event-name">Special Singing & Dancing Performance (EBSB Event)</em>
 							</a>
 						</li>
 
