--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 						<ul class="menu">
 							<li class="menu-item"><a href="index.html">Home</a></li>
 							<li class="menu-item"><a href="about.html">About</a></li>
-							<li class="menu-item"><a href="gallery.html">Gallery</a></li>
+							<li class="menu-item"><a href="gallery.html">Team</a></li>
 							<li class="menu-item"><a href="sindex.html">Schedule</a></li>
 							<li class="menu-item current-menu-item"><a href="contact.html">Contact</a></li>
 						</ul> <!-- .menu -->
