Finalizing Heads Description

--- a/gallery.html
+++ b/gallery.html
@@ -103,6 +103,42 @@
 					</a>
 				</li>
 				
+				<li>
+					<a href="#" style="background: url('images/NaveenReddy.jpg'); background-size: cover;" aria-controls="aside" aria-expanded="false">
+						<div class="details visually-hidden">
+							<img src="images/NaveenReddy.jpg" alt="Large bridge">
+							<div class="text-copy wrapper">
+								<h1 style="color: white">Naveen Reddy</h1>
+								<h2 style="color: white">Head of Dramatics</h2>
+							</div>
+						</div>
+					</a>
+				</li>
+
+				<li>
+					<a href="#" style="background: url('images/Mridul Sahu.jpg'); background-size: cover;" aria-controls="aside" aria-expanded="false">
+						<div class="details visually-hidden">
+							<img src="images/Mridul Sahu.jpg" alt="Large bridge">
+							<div class="text-copy wrapper">
+								<h1 style="color: white">Mridul Sahu</h1>
+								<h2 style="color: white">Head of Web Design</h2>
+							</div>
+						</div>
+					</a>
+				</li>
+
+				<li>
+					<a href="#" style="background: url('images/jibesh.jpg'); background-size: cover;" aria-controls="aside" aria-expanded="false">
+						<div class="details visually-hidden">
+							<img src="images/jibesh.jpg" alt="Large bridge">
+							<div class="text-copy wrapper">
+								<h1 style="color: white">Jibesh Bhattacharjee</h1>
+								<h2 style="color: white">Webpage Maintenance Secretary -NITM</h2>
+							</div>
+						</div>
+					</a>
+				</li>
+
 			</ul>
 		</section>
 
